--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <div class="card">
       <div class="img-top">
-        <img src="assets/img/qr-code.png" >
+        <img src="assets/img/qr-code.png" alt="qr-code">
       </div>
       <div class="card-title">
         <h4>Improve your front-end skills by building projects</h4>
